Se ha traducido el archivo index.html

--- a/MechaType-master/frontend/src/index.html
+++ b/MechaType-master/frontend/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <load src="html/head.html" />
 
   <body>
@@ -12,7 +12,7 @@
     <div id="notificationCenter">
       <div class="clearAll button invisible" style="display: none">
         <i class="fas fa-times"></i>
-        Clear all
+        Limpiar todo
       </div>
       <div class="history"></div>
     </div>
@@ -30,11 +30,9 @@
       <main class="full-width content-grid" style="height: 100%">
         <div id="ad-vertical-left-wrapper" class="ad advertisement ad-v focus">
           <div class="icon"><i class="fas fa-ad"></i></div>
-          <div id="ad-vertical-left"></div>
         </div>
         <div id="ad-vertical-right-wrapper" class="ad advertisement ad-v focus">
           <div class="icon"><i class="fas fa-ad"></i></div>
-          <div id="ad-vertical-right"></div>
         </div>
         <load src="html/pages/loading.html" />
         <load src="html/pages/about.html" />
