cabeza del sitio web, es el heade, en html

--- a/MechaType-master/frontend/src/html/header.html
+++ b/MechaType-master/frontend/src/html/header.html
@@ -1,4 +1,4 @@
-<header>
+<header>  <!--Este archivo html es la cabeza del proyecto,-->
   <a id="logo" href="/" router-link>
     <div class="icon">
       <svg
